# quietude

./: .gitignore  Cargo.toml  package-lock.json  todo.txt
assets/data/dialogue/: TEST.txt
dev_tools/: Cargo.toml
quark/: '  .gitignore  Cargo.toml  todo.txt
quark/src/: app.rs  lib.rs  main.rs  store.rs  types.rs
quark/src/ui/: choice_menu.rs  chunk_editor.rs  control_scheme.rs  cursor.rs  dialogue_editor.rs  entity_view.rs  errors.rs  mod.rs  popup_message.rs  traits.rs  tui.rs  ui.rs  ui_callback.rs
src/: .gitignore  app.rs  constants.rs  lib.rs  main.rs  rng.rs  store.rs  tui.rs  types.rs  utils.rs
src/ui/: choice_menu.rs  constants.rs  control_scheme.rs  cursor.rs  dialogue_window.rs  log_window.rs  main_screen.rs  mod.rs  overworld_window.rs  popup_message.rs  splash_screen.rs  traits.rs  tui.rs  ui.rs  ui_callback.rs  utils.rs  widgets.rs
src/world/: action.rs  allegiance.rs  chunk.rs  conditions.rs  constants.rs  dialogue.rs  entity.rs  faction.rs  item.rs  log.rs  mod.rs  traits.rs  world.rs
