[package]
name = "quietude"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
include_dir = "0.7.4"
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info"] }
serde = "1.0.209"
serde_json = "1.0.128"
tui-textarea = "0.6.1"
