[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
log = "0.4.22"
log4rs = "1.3.0"
quietude = { path = "../../quietude" }
ratatui = "0.28.1"
serde = "1.0.215"
tui-textarea = "0.6.1"
